Docs: Update README regarding dependency validation

--- a/skillware/skills/finance/wallet_screening/manifest.yaml
+++ b/skillware/skills/finance/wallet_screening/manifest.yaml
@@ -24,3 +24,5 @@ env_vars:
   COINGECKO_API_KEY:
     description: "Optional API key for CoinGecko. If not provided, free tier is used (rate limited)."
     required: false
+requirements:
+  - requests
